--- a/src/app/pathfind/components/pathfind-unit/pathfind-unit.component.html
+++ b/src/app/pathfind/components/pathfind-unit/pathfind-unit.component.html
@@ -1,7 +1,6 @@
 <div
   (click)="toggle()"
-  [@openClose]="isOpen ? 'open' : 'closed'"
+  (mousedown)="toggle()"
+  [@animationTrigger]="animationTrigger()"
   class="open-close-container"
->
-  <p>The box is now {{ isOpen ? "Open" : "Closed" }}!</p>
-</div>
+></div>
