--- a/src/app/pathfind/pathfind.container.html
+++ b/src/app/pathfind/pathfind.container.html
@@ -1,2 +1,3 @@
 <p>pathfind works!</p>
-<app-pathfind-unit></app-pathfind-unit>
+<app-pathfind-unit [unit]="unit"></app-pathfind-unit>
+<app-code-editor></app-code-editor>
