--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap";
 @import "~@ng-select/ng-select/themes/default.theme.css";
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
