--- a/src/app/code-editor/code-editor/code-editor.component.html
+++ b/src/app/code-editor/code-editor/code-editor.component.html
@@ -34,8 +34,10 @@
         ></ng-select>
       </div>
       <div class="col-3 px-4 d-flex justify-content-end">
-        <button class="btn btn-primary" (click)="format()">Format code</button>
-        <button class="btn btn-primary" (click)="run()">Run</button>
+        <button class="btn btn-primary mr-1" (click)="format()">
+          Format code
+        </button>
+        <button class="btn btn-success" (click)="run()">Run</button>
       </div>
     </div>
     <div class="row m-0 h-100 justify-content-center align-items-center">
