--- a/src/app/code-editor/code-editor/code-editor.component.html
+++ b/src/app/code-editor/code-editor/code-editor.component.html
@@ -1,9 +1,9 @@
-<div class="w-100 h-100">
+<div class="container-fluid ">
   <form [formGroup]="formGroup" class="w-100 h-100 d-flex flex-column">
     <div *ngIf="!!error" class="row m-0 alert alert-danger">{{ error }}</div>
 
     <div class="row m-0 d-flex justify-content-between align-items-end">
-      <div class="col-3 px-4">
+      <div class="col-3 col-xs-4 px-4">
         <label for="algorithm">Algorithm</label>
         <ng-select
           [searchable]="false"
@@ -16,7 +16,7 @@
           bindLabel="name"
         ></ng-select>
       </div>
-      <div class="col-3 px-4">
+      <div class="col-3 col-xs-4 px-4">
         <label for="language">Language</label>
         <ng-select
           [searchable]="false"
@@ -30,7 +30,7 @@
           bindValue="code"
         ></ng-select>
       </div>
-      <div class="col-3 px-4">
+      <div class="col-3 col-xs-4 px-4">
         <label for="theme">Theme</label>
         <ng-select
           [searchable]="false"
@@ -44,7 +44,7 @@
           bindValue="code"
         ></ng-select>
       </div>
-      <div class="col-3 px-4 d-flex justify-content-end">
+      <div class="col-3 col-xs-12 px-4 d-flex justify-content-end">
         <button class="btn btn-primary mr-1" (click)="format()">
           Format code
         </button>
