--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,7 @@ body {
   width: 100%;
   height: 100%;
 }
+
+.ng-dropdown-panel .ng-dropdown-panel-items .ng-option {
+  white-space: normal !important;
+}
