--- a/src/app/code-editor/code-editor/code-editor.component.html
+++ b/src/app/code-editor/code-editor/code-editor.component.html
@@ -1,5 +1,5 @@
-<div class="container-fluid ">
-  <form [formGroup]="formGroup" class="w-100 h-100 d-flex flex-column">
+<div class="flex-container-centered">
+  <form [formGroup]="formGroup" class="flex-container-centered flex-column">
     <div *ngIf="!!error" class="row m-0 alert alert-danger">{{ error }}</div>
 
     <div class="row m-0 d-flex justify-content-between align-items-end">
