--- a/src/app/code-editor/components/code-editor-base/code-editor-base.component.html
+++ b/src/app/code-editor/components/code-editor-base/code-editor-base.component.html
@@ -1,7 +1,8 @@
 <div class="w-100 h-100">
-  <ngx-monaco-editor
-    class="w-100 h-100"
-    [options]="editorOptions"
-    [(ngModel)]="code"
-  ></ngx-monaco-editor>
+  <div
+    #editor
+    [ngClass]="'language-' + !!language ? language : 'javascript'"
+    class="w-100 h-100 editor"
+    style="width: 100%; height: 1000px;"
+  ></div>
 </div>
