--- a/src/app/code-editor/code-editor/code-editor.component.html
+++ b/src/app/code-editor/code-editor/code-editor.component.html
@@ -1,11 +1,11 @@
-<div class="flex-container-centered">
+<div class="flex-container-centered px-0">
   <form [formGroup]="formGroup" class="flex-container flex-column">
     <div *ngIf="!!error" class="flex-row m-0 alert alert-danger">
       {{ error }}
     </div>
 
     <div class="flex-row m-0 justify-content-between align-items-end">
-      <div class="col px-4">
+      <div class="col px-3">
         <label for="algorithm">Algorithm</label>
         <ng-select
           [searchable]="false"
@@ -18,7 +18,7 @@
           bindLabel="name"
         ></ng-select>
       </div>
-      <div class="col px-4">
+      <div class="col px-3">
         <label for="language">Language</label>
         <ng-select
           [searchable]="false"
@@ -32,7 +32,7 @@
           bindValue="code"
         ></ng-select>
       </div>
-      <!-- <div class="col px-4">
+      <!-- <div class="col px-3">
         <label for="theme">Theme</label>
         <ng-select
           [searchable]="false"
@@ -46,19 +46,17 @@
           bindValue="code"
         ></ng-select>
       </div> -->
-      <div
-        class="col-md-4 col-sm-12 px-4 my-md-0 my-sm-2 d-flex justify-content-end"
-      >
-        <button class="btn btn-primary mr-1" (click)="format()">
+      <div class="col-md-4 col-12 px-3 my-md-0 my-2 d-flex justify-content-end">
+        <button class="btn btn-danger mr-1" (click)="format()">
           Format code
         </button>
         <button class="btn btn-success" (click)="run()">Run</button>
       </div>
     </div>
-    <div class="flex-row h-100 m-0 flex-centered">
+    <div class="flex-row-mb-0 h-100 m-0 flex-centered">
       <app-code-editor-base
         formControlName="code"
-        class="h-100 col-12"
+        class="h-100 col-12 px-0"
       ></app-code-editor-base>
     </div>
   </form>
