--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,6 +32,14 @@ body {
 
 .flex-row {
   @extend .row;
+  @extend .px-0;
   @extend .mb-1;
+  width: 100%;
+}
+
+.flex-row-mb-0 {
+  @extend .row;
+  @extend .px-0;
+  @extend .mb-0;
   width: 100%;
 }
