--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,8 +5,11 @@
 
 html,
 body {
-  width: 100%;
   height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 .ng-dropdown-panel .ng-dropdown-panel-items .ng-option {
