Pathfind grid component - WIP Added drag and drop events, mouse events, animations and icons based on the state

--- a/src/app/code-editor/code-editor-side-menu/code-editor-side-menu.component.html
+++ b/src/app/code-editor/code-editor-side-menu/code-editor-side-menu.component.html
@@ -1,4 +1,4 @@
-<div class="flex-container side-menu">
+<div class="container-flex-full side-menu">
   <div [@openClose]="isOpen ? 'open' : 'close'" class="col editor px-0">
     <app-code-editor *ngIf="isOpen"></app-code-editor>
   </div>
