--- a/src/app/pathfind/components/pathfind-grid/pathfind-grid.component.html
+++ b/src/app/pathfind/components/pathfind-grid/pathfind-grid.component.html
@@ -1,1 +1,27 @@
-<p>pathfind-grid works!</p>
+<div class="container-centered-flex">
+  <div class="w-95 h-95" #gridRef>
+    <ng-container *ngFor="let row of grid; index as i">
+      <div class="container-flex flex-direction-row">
+        <app-pathfind-unit
+          *ngFor="let unit of row"
+          [unit]="unit"
+          (drop)="onDrop($event, unit)"
+          (dragover)="allowDrag($event)"
+          (mousedown)="onMouseDown(unit)"
+          (mouseup)="onMouseUp(unit)"
+          (mouseover)="onMouseOver(unit)"
+        >
+          <div
+            *ngIf="unit.isFinishPoint || unit.isStartingPoint"
+            class="container-centered-flex"
+          >
+            <span (dragstart)="onDrag($event, unit)" draggable="true">
+              <fa-icon *ngIf="unit.isFinishPoint" [icon]="flagIcon"></fa-icon>
+              <fa-icon *ngIf="unit.isStartingPoint" [icon]="starIcon"></fa-icon>
+            </span>
+          </div>
+        </app-pathfind-unit>
+      </div>
+    </ng-container>
+  </div>
+</div>
