--- a/src/app/pathfind/pathfind.container.html
+++ b/src/app/pathfind/pathfind.container.html
@@ -1,2 +1,1 @@
-<p>pathfind works!</p>
-<app-pathfind-unit [unit]="unit"></app-pathfind-unit>
+<app-pathfind-grid class="w-100 h-100"></app-pathfind-grid>
