--- a/src/app/code-editor/code-editor/code-editor.component.html
+++ b/src/app/code-editor/code-editor/code-editor.component.html
@@ -1,10 +1,10 @@
-<div class="flex-container-centered px-0">
-  <form [formGroup]="formGroup" class="flex-container flex-column">
-    <div *ngIf="!!error" class="flex-row m-0 alert alert-danger">
+<div class="container-centered-flex px-0">
+  <form [formGroup]="formGroup" class="container-flex-full flex-column">
+    <div *ngIf="!!error" class="row-flex m-0 alert alert-danger">
       {{ error }}
     </div>
 
-    <div class="flex-row m-0 justify-content-between align-items-end">
+    <div class="row-flex m-0 justify-content-between align-items-end">
       <div class="col px-3">
         <label for="algorithm">Algorithm</label>
         <ng-select
@@ -53,7 +53,7 @@
         <button class="btn btn-success" (click)="run()">Run</button>
       </div>
     </div>
-    <div class="flex-row-mb-0 h-100 m-0 flex-centered">
+    <div class="row-flex-mb-0 h-100 m-0 centered-flex">
       <app-code-editor-base
         formControlName="code"
         class="h-100 col-12 px-0"
