--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
 <app-code-editor-side-menu></app-code-editor-side-menu>
-<router-outlet></router-outlet>
+<router-outlet class="w-100 h-100"></router-outlet>
