Moved error message, added touch events

--- a/src/app/code-editor/code-editor-side-menu/code-editor-side-menu.component.html
+++ b/src/app/code-editor/code-editor-side-menu/code-editor-side-menu.component.html
@@ -1,11 +1,13 @@
 <div
   class="container-flex-full side-menu"
   [@openClose]="isOpen ? 'open' : 'close'"
+  (panleft)="onPanLeft()"
 >
   <div class="col editor px-0" [@visibleHidden]="isOpen ? 'visible' : 'hidden'">
     <app-code-editor></app-code-editor>
   </div>
   <div
+    (panright)="onPanRight()"
     class="d-flex align-items-center"
     [ngClass]="{ 'hide-arrow-mobile': isOpen }"
   >
