--- a/src/app/code-editor/code-editor/code-editor.component.html
+++ b/src/app/code-editor/code-editor/code-editor.component.html
@@ -1,9 +1,5 @@
 <div class="container-centered-flex px-0">
   <form [formGroup]="formGroup" class="container-flex-full flex-column">
-    <div *ngIf="!!error" class="row-flex m-0 alert alert-danger">
-      {{ error }}
-    </div>
-
     <div class="row-flex m-0 justify-content-between align-items-end">
       <div class="col px-3">
         <label for="algorithm">Algorithm</label>
@@ -18,6 +14,7 @@
           bindLabel="name"
         ></ng-select>
       </div>
+
       <div class="col px-3">
         <label for="language">Language</label>
         <ng-select
@@ -46,6 +43,7 @@
           bindValue="code"
         ></ng-select>
       </div> -->
+
       <div class="col-md-4 col-12 px-3 my-md-0 my-2 d-flex justify-content-end">
         <button class="btn btn-danger mr-1" (click)="format()">
           Format code
@@ -53,6 +51,10 @@
         <button class="btn btn-success" (click)="run()">Run</button>
       </div>
     </div>
+    <div *ngIf="!!error" class="row px-3 m-0 alert alert-danger">
+      {{ error }}
+    </div>
+
     <div class="row-flex-mb-0 h-100 m-0 centered-flex">
       <app-code-editor-base
         formControlName="code"
