Improved visuals and added tap support for the grid

--- a/src/app/pathfind/components/pathfind-unit/pathfind-unit.component.html
+++ b/src/app/pathfind/components/pathfind-unit/pathfind-unit.component.html
@@ -2,10 +2,9 @@
   [@animationTrigger]="animationTrigger()"
   [ngStyle]="{
     height: unitSize + 'px',
-    width: unitSize + 'px',
-    border: '1px solid black'
+    width: unitSize + 'px'
   }"
-  class="noselect"
+  class="grid-unit noselect"
 >
   <ng-content> </ng-content>
 </div>
