--- a/src/app/pathfind/components/pathfind-node/pathfind-node.component.html
+++ b/src/app/pathfind/components/pathfind-node/pathfind-node.component.html
@@ -1,10 +1,10 @@
 <div
   [@animationTrigger]="animationTrigger()"
   [ngStyle]="{
-    height: unitSize + 'px',
-    width: unitSize + 'px'
+    height: nodeSize + 'px',
+    width: nodeSize + 'px'
   }"
-  class="grid-unit noselect"
+  class="grid-node noselect"
 >
   <ng-content> </ng-content>
 </div>
