--- a/src/app/pathfind/components/pathfind-grid/pathfind-grid.component.html
+++ b/src/app/pathfind/components/pathfind-grid/pathfind-grid.component.html
@@ -1,4 +1,5 @@
 <div class="container-centered-flex">
+  <button (click)="runDis()"></button>
   <div class="w-95 h-95 d-flex centered-flex" #gridRef>
     <div>
       <ng-container *ngFor="let row of grid; index as i">
