Moved services in the shared folder Created automatic array conversion from enums

--- a/src/app/code-editor/code-editor/code-editor.component.html
+++ b/src/app/code-editor/code-editor/code-editor.component.html
@@ -25,7 +25,7 @@
           formControlName="language"
           [items]="languages"
           placeholder="Language"
-          bindLabel="name"
+          bindLabel="code"
           bindValue="code"
         ></ng-select>
       </div>
