Inverted key and name properties to avoid missleading properties

--- a/src/app/code-editor/code-editor/code-editor.component.html
+++ b/src/app/code-editor/code-editor/code-editor.component.html
@@ -25,8 +25,8 @@
           formControlName="language"
           [items]="languages"
           placeholder="Language"
-          bindLabel="code"
-          bindValue="code"
+          bindLabel="name"
+          bindValue="key"
         ></ng-select>
       </div>
       <!-- <div class="col px-3">
