--- a/src/app/code-editor/code-editor/code-editor.component.html
+++ b/src/app/code-editor/code-editor/code-editor.component.html
@@ -26,7 +26,7 @@
           [items]="languages"
           placeholder="Language"
           bindLabel="name"
-          bindValue="key"
+          bindValue="id"
         ></ng-select>
       </div>
       <!-- <div class="col px-3">
