Added enumObjects for easy finding of names and values in arrays and objects based on enums - will be simplified in future versions Adjusted the code editor and the state manager

--- a/src/app/code-editor/code-editor/code-editor.component.html
+++ b/src/app/code-editor/code-editor/code-editor.component.html
@@ -9,7 +9,7 @@
           [selectOnTab]="true"
           labelForId="algorithm"
           formControlName="algorithm"
-          [items]=""
+          [items]="availableAlgorithms"
           placeholder="Algorithm"
           bindLabel="name"
         ></ng-select>
@@ -23,7 +23,7 @@
           [selectOnTab]="true"
           labelForId="language"
           formControlName="language"
-          [items]="languages"
+          [items]="availableLanguages"
           placeholder="Language"
           bindLabel="name"
         ></ng-select>
