Changed animation speed Added header component Adjusted styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<app-code-editor-side-menu></app-code-editor-side-menu>
-<router-outlet class="w-100 h-100"></router-outlet>
+<div class="app-container">
+  <app-code-editor-side-menu></app-code-editor-side-menu>
+  <app-header></app-header>
+  <router-outlet
+    class="container-flex centered-flex fill-height"
+  ></router-outlet>
+</div>
