Removed arrow on small devices

--- a/src/app/code-editor/code-editor-side-menu/code-editor-side-menu.component.html
+++ b/src/app/code-editor/code-editor-side-menu/code-editor-side-menu.component.html
@@ -13,7 +13,7 @@
       <fa-icon
         *ngIf="isOpen"
         [icon]="leftArrow"
-        class="text-white"
+        class="text-white hide-arrow-mobile"
         [size]="'2x'"
         (click)="toggle()"
       ></fa-icon>
