Removed category title on mobile

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
   <form [formGroup]="formGroup" class="container-flex-full flex-column">
     <div class="row-flex m-0 justify-content-between align-items-center">
       <div class="col-2 px-3">
-        <h1 class="my-0">{{ categoryName }}</h1>
+        <h1 class="my-0 hide-mobile">{{ categoryName }}</h1>
       </div>
       <div class="col px-3">
         <ng-select
