Added mesh view on pathfind node

--- a/src/app/pathfind/components/pathfind-node/pathfind-node.component.html
+++ b/src/app/pathfind/components/pathfind-node/pathfind-node.component.html
@@ -4,7 +4,8 @@
     height: nodeSize + 'px',
     width: nodeSize + 'px'
   }"
-  class="grid-node noselect"
+  [ngClass]="{ 'grid-node': !isMesh, 'mesh-node': isMesh }"
+  class="noselect"
 >
   <ng-content> </ng-content>
 </div>
