--- a/src/app/pathfind/components/pathfind-node/pathfind-node.component.scss
+++ b/src/app/pathfind/components/pathfind-node/pathfind-node.component.scss
@@ -1,3 +1,9 @@
 .grid-node {
   border: 1px solid #bce4f9;
 }
+
+.mesh-node {
+  border: 1px solid white;
+  background-image: url("/assets/images/mesh-node-clear-light.svg");
+  background-size: cover;
+}
