Added button to change to mesh view

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,6 +20,10 @@
         <div *ngIf="!!error" class="row px-3 m-0 alert alert-danger">
           {{ error }}
         </div>
+        <button class="btn btn-warning" (click)="toggleView()">
+          Toggle view
+        </button>
+
         <button class="btn btn-success" (click)="run()">Run</button>
       </div>
     </div>
