--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="h-100 w-100 m-0 p-0 d-flex flex-wrap flex-column">
+<div class="h-100 w-100 m-0 p-0 d-flex flex-column">
   <app-code-editor-side-menu></app-code-editor-side-menu>
 
   <app-header class="w-100"></app-header>
